# Student_Manage_System

./: CMakeLists.txt  README.txt
client/: CMakeLists.txt  main.cpp
demo/: CMakeLists.txt  Types.h  db.cpp  db.h  db_connection_guard.cpp  db_connection_guard.h  db_connection_pool.cpp  db_connection_pool.h  main.cpp  test_demo.cpp  test_demo.h  threadsafe_stack.h  user.cpp  user.h
demo/test/: CMakeLists.txt  db_connection_guard_test.cpp  db_connection_pool_test.cpp  db_test.cpp  test_init.cpp  test_init.h  threadsafe_stack_test.cpp  user_test.cpp
mysql/: student.sql
server/: CMakeLists.txt  main.cpp
